--- a/UI/css/signup.css
+++ b/UI/css/signup.css
@@ -14,6 +14,12 @@ form{
     padding: 3rem;
 }
 
+.bg {
+    background: url('../img/signup-in.jpg') no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
 .form-card{
     margin-bottom: 3rem;
 }
